# GlacerPass

./: README.md
llvm-pass-skeleton/: CMakeLists.txt  FINAL_SUMMARY.md  README.md  Skeleton_backup_sep25.cpp  Skeleton_future_example.txt  Skeleton_working.cpp  TESTING_GUIDE.md  VERIFICATION_SUMMARY.md  allocator_output.txt  glacier.c  glacier.ll  glacier.s  glacier1.mir  glacier2.mir  glacier4.mir  glacier4.s  glacier5_spaces.mir  glacier_after_isel.s  glacier_rest.mir  glacier_test_rest.s  my_glacier.mir  my_glacier_1.mir  my_glacier_3.mir  no_reg_pressure.s  output1.s  something.c  something.ll  test.c  test.ll  test.s  test.sh  test_allocator.sh  test_discard.c  test_discard.ll  test_discard.s  test_discard1.ll  test_pressure.c  test_pressure.ll  test_pressure.s  test_pressure_msp430.ll  (+9 more)
llvm-pass-skeleton/.cache/clangd/index/: Logging.h.15241B734358A5E0.idx  Skeleton.cpp.3505125374AAF4FE.idx
llvm-pass-skeleton/skeleton/: CMakeLists.txt  Logging.h  Skeleton.cpp
